# Project-PulseGraph

./: .env.example  .gitignore  AUDIT_HANDOFF.md  README.md  RESULTS.md  STUDY_AUDIT.md  WRITEUP.md  alembic.ini  pyproject.toml  setup.sh
alembic/: env.py  script.py.mako
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  (+1 more)
pulsegraph/: __init__.py  config.py
pulsegraph/api/: app.py  models.py  routes.py  state.py
pulsegraph/data/: events.py  gharchive.py  github_api.py  libraries_io.py  loader.py  schema.py
pulsegraph/evaluation/: backtest.py  calibration.py  metrics.py
pulsegraph/explain/: attribution.py  confidence.py  narrative.py
pulsegraph/forecast/: baselines.py  chronos_forecaster.py  timesfm_forecaster.py
pulsegraph/graph/: builder.py  features.py
pulsegraph/regime/: analog.py  classifier.py  clustering.py  sampler.py
reports/: experiment_real_baselines_meta.json  experiment_real_full6_meta.json  experiment_real_full_meta.json  phase0_report.json  pretraining_overlap_audit.md
scripts/: add_timesfm.py  backfill_gharchive.py  daily_ingest.py  final_analysis.py  generate_spotcheck.py  ingest_stars.py  phase0_feasibility.py  review_censoring.py  review_cluster_inference.py  review_integrity.py  review_local_mean_lookbacks.py  review_scale.py  review_strong_baselines.py  review_windows.py  run_experiment.py  summarize_ingest.py  test_crps_fairness.py  validate_chronos.py
tests/: test_analog.py  test_baselines.py  test_loader.py  test_metrics.py  test_regime.py  test_timesfm_forecaster.py
(+5 files in other folders)
