[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsegraph"
version = "0.1.0"
description = "Empirical study: do Chronos-2 and TimesFM-2.5 beat simple baselines at forecasting daily GitHub new-star counts?"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=0.20",
    "torch>=2.1",
    "chronos-forecasting>=2.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "lightgbm>=4.2",
    "properscoring>=0.1",
    "scipy>=1.12",
    "networkx>=3.2",
    "faiss-cpu>=1.7",
    "google-cloud-bigquery>=3.14",
    "db-dtypes>=1.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipython>=8.20",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulsegraph*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
